Core: Conjuntos agora podem ser ordenados; melhorado listagem dos filtros do painel no front